This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - added public bookmarks
          - added recurring downtimes for host- and servicegroups
          - added regular expression contact filter (Scott Dworkis)
          - Bug Fixes
            - fixed negated regex group search
            - fixed encoding in reports / bookmarks

1.68     Tue Apr  9 21:04:03 CEST 2013
          - allow custom cron entries for reports / recurring downtimes
          - Logfilecache
            - speed up incremental file import
            - speed up mysql updates
          - Shinken
            - added escalation object to config tool
          - Bug Fixes
            - fixed adding multiple recurring downtimes for a single host
            - no sound alerts if notifications are disabled

1.66-2   Mon Apr  1 22:59:55 CEST 2013
          - better utf-8 support in report mails
          - ensure image data is a pnp file
          - Bug Fixes
            - fixed translation issue in italian reports
            - fixed utf-8 problem in report month names
            - fixed daylight saving issue in reports

1.66     Tue Mar 26 18:43:48 CET 2013
          - added mysql logfile cache
          - added logcache statistics to performance info page
          - added naglintrc config file
            - made indention and sort order configurable
          - added optional server side js error logging
          - added 'compile' cli command to precompile templates
          - added 'perf_bar_pnp_popup' option to control pnp popups in perfbar
          - added logs link for hosts/services to directly filter logfiles
          - removed background color from status page (can be reenabled by 'status_color_background')
          - panorama view:
            - auto adjust minemap column height
            - use escape_html setting from cgi.cfg
            - support show_long_plugin_output inline
          - reports